Mobile first approch is setteld and other email verfication is in process..

--- a/client/src/CSS_Files/Navbar.css
+++ b/client/src/CSS_Files/Navbar.css
@@ -1,4 +1,4 @@
-@media (min-width:600px){
+@media (min-width:700px){
   /* .brandName{
     font-weight: bold;
   } */
@@ -14,5 +14,16 @@
   }
   .brandNam{
     color: black;
+  }
+  #navid{
+    width: 100%;
+  }
+}
+@media (max-width:700px){
+  .login-text{
+    color: black;
+  }
+  #navid{
+    width: 100%;
   }
 }
