--- a/client/src/CSS_Files/Login.css
+++ b/client/src/CSS_Files/Login.css
@@ -18,3 +18,17 @@
     margin-top: 200px;
   }
 }
+@media (max-width : 700px ){
+  .main_login{
+    margin: 10px;
+  }
+  .signin_text{
+    font-size : 40px;
+    font-weight: bold;
+    margin-bottom: 40px;
+  }
+  .loginsubmitbt{
+    margin-bottom: 20px;
+    margin-top: 20px;
+  }
+}
