--- a/client/src/CSS_Files/Navbar.css
+++ b/client/src/CSS_Files/Navbar.css
@@ -18,8 +18,14 @@
   #navid{
     width: 100%;
   }
+  .navbar{
+    width : 100%;
+  }
 }
 @media (max-width:700px){
+  .navbar{
+    width : 100%;
+  }
   .login-text{
     color: black;
   }
